--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'kotlin-android-extensions'
 
 androidExtensions {
@@ -96,8 +98,8 @@ dependencies {
     androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunner"
     androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoCore"
     implementation "com.google.dagger:dagger-android:$rootProject.ext.dagger2"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.ext.dagger2"
-    annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2"
+    kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.dagger2"
+    kapt "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2"
     implementation "com.google.dagger:dagger:$rootProject.ext.dagger2"
     implementation "com.google.dagger:dagger-android-support:$rootProject.ext.dagger2"
 
