--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "org.sonarqube" version "2.6"
+    id 'kotlin-android-extensions'
 }
 apply plugin: 'com.android.application'
 
@@ -18,7 +19,7 @@ static def getDate() {
 }
 
 android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
+    compileSdk rootProject.ext.compileSdkVersion
 
     flavorDimensions "default"
     productFlavors {
@@ -61,8 +62,8 @@ android {
         versionProps.store(versionPropsFile.newWriter(), null)
         defaultConfig {
             applicationId "com.androidskeleton"
-            minSdkVersion rootProject.ext.minSdkVersion
-            targetSdkVersion rootProject.ext.targetSdkVersion
+            minSdk rootProject.ext.minSdkVersion
+            targetSdk rootProject.ext.targetSdkVersion
             versionCode code
             versionName "0.1.0"
             archivesBaseName = "ProjectName-$versionName" + "." + versionCode + "-" + getDate()
@@ -82,21 +83,31 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     defaultConfig {}
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support:recyclerview-v7:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support:design:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support:support-v4:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support:cardview-v7:$rootProject.ext.supportLibraryVersion"
-    implementation "com.android.support.constraint:constraint-layout:$rootProject.ext.constraintLayout"
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation "junit:junit:$rootProject.ext.junit"
-    androidTestImplementation "com.android.support.test:runner:$rootProject.ext.testRunner"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:$rootProject.ext.espressoCore"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "com.google.dagger:dagger-android:$rootProject.ext.dagger2"
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.dagger2"
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2"
@@ -113,6 +124,5 @@ dependencies {
     implementation "com.facebook.stetho:stetho-okhttp3:$rootProject.ext.stetho"
     implementation "com.facebook.fresco:fresco:$rootProject.ext.fresco"
     androidTestImplementation "com.google.code.findbugs:jsr305:$rootProject.ext.findBugs"
-    implementation "android.arch.lifecycle:extensions:$lifecycleVersion"
     //implementation "com.orhanobut:logger:$logger"
 }
