--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.7.10'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:7.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +17,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://maven.google.com/' }
     }
 }
@@ -26,17 +26,17 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 ext {
-    minSdkVersion = 16
-    targetSdkVersion = 27
-    compileSdkVersion = 27
+    minSdkVersion = 26
+    targetSdkVersion = 33
+    compileSdkVersion = 33
 
     //library
-    supportLibraryVersion = '27.1.1'
-    constraintLayout = '1.1.0'
-    junit = '4.12'
-    testRunner = '1.0.1'
-    espressoCore = '3.0.1'
-    dagger2 = '2.15'//'2.14.1'
+    supportLibraryVersion = '28.0.0'
+    constraintLayout = '2.0.4'
+    junit = '4.13.2'
+    testRunner = '1.0.2'
+    espressoCore = '3.0.2'
+    dagger2 = '2.42'//'2.15'
     retrofit = '2.4.0'
     rxandroid = '2.0.2'
     rxandroidAdapter = '1.0.0'
@@ -47,7 +47,7 @@ ext {
     crashLytics = '2.9.2'
     firebase='11.8.0'
     singleDateAndTimePicker='2.0.4'
-    findBugs='3.0.1'
+    findBugs='3.0.2'
     lifecycleVersion = '1.1.1'
     logger='2.2.0'
 }
