--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,16 +98,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.appcompat:appcompat:$rootProject.ext.appcompat"
+    implementation "androidx.recyclerview:recyclerview:$rootProject.ext.recyclerview"
+    implementation "com.google.android.material:material:$rootProject.ext.material"
+    implementation "androidx.legacy:legacy-support-v4:$rootProject.ext.supportV4"
+    implementation "androidx.cardview:cardview:$rootProject.ext.cardview"
+    implementation "androidx.constraintlayout:constraintlayout:$rootProject.ext.constraintLayout"
     testImplementation "junit:junit:$rootProject.ext.junit"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    androidTestImplementation "androidx.test.ext:junit:$rootProject.ext.junitExt"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.ext.espressoCore"
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.ext.lifecycleExtension"
     implementation "com.google.dagger:dagger-android:$rootProject.ext.dagger2"
     kapt "com.google.dagger:dagger-android-processor:$rootProject.ext.dagger2"
     kapt "com.google.dagger:dagger-compiler:$rootProject.ext.dagger2"
