--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,15 @@ ext {
     compileSdkVersion = 33
 
     //library
+    appcompat = '1.5.1'
+    recyclerview = '1.2.1'
+    material='1.6.1'
+    supportV4 = '1.0.0'
+    cardview = '1.0.0'
     supportLibraryVersion = '28.0.0'
-    constraintLayout = '2.0.4'
+    constraintLayout = '2.1.4'
     junit = '4.13.2'
+    junitExt = '1.1.3'
     testRunner = '1.0.2'
     espressoCore = '3.0.2'
     dagger2 = '2.42'//'2.15'
@@ -41,13 +47,13 @@ ext {
     rxandroid = '2.0.2'
     rxandroidAdapter = '1.0.0'
     loggingInterceptor = '3.4.1'
-    stetho = '1.5.0'
+    stetho = '1.6.0'
     glide = '4.7.1'
-    fresco = '1.9.0'
+    fresco = '2.6.0'
     crashLytics = '2.9.2'
-    firebase='11.8.0'
-    singleDateAndTimePicker='2.0.4'
-    findBugs='3.0.2'
-    lifecycleVersion = '1.1.1'
-    logger='2.2.0'
+    firebase = '11.8.0'
+    singleDateAndTimePicker = '2.0.4'
+    findBugs = '3.0.2'
+    lifecycleExtension = '2.2.0'
+    logger = '2.2.0'
 }
