--- a/build.gradle
+++ b/build.gradle
@@ -41,13 +41,13 @@ ext {
     junit = '4.13.2'
     junitExt = '1.1.3'
     testRunner = '1.0.2'
-    espressoCore = '3.0.2'
-    dagger2 = '2.42'//'2.15'
-    retrofit = '2.4.0'
-    rxandroid = '2.0.2'
+    espressoCore = '3.4.0'
+    dagger2 = '2.44'//'2.15'
+    retrofit = '2.9.0'
+    rxandroid = '2.1.1'
     rxJava = '2.2.21'
     rxandroidAdapter = '1.0.0'
-    loggingInterceptor = '3.4.1'
+    loggingInterceptor = '5.0.0-alpha.10'
     stetho = '1.6.0'
     glide = '4.7.1'
     fresco = '2.6.0'
