--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity" />
 
         <activity
-            android:name=".module.splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:screenOrientation="nosensor"
             android:theme="@style/SplashTheme"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
